# PlayGrounds

call-graph/: README.md  package-lock.json  package.json  tsconfig.base.json
call-graph/backend/: package.json  tsconfig.json
call-graph/examples/: chaos-30-files.md
call-graph/frontend/: index.html  package.json  tsconfig.json
call-graph/shared/: package.json  tsconfig.json
diff2html/: README.md  diff-report.html  multi-sample.diff  rendered-diff-report.html  sample.diff  script.js
diff_maker/: sample_1000.diff  template.html
diff_maker/gas_container_bound/: Code.gs  CreateDiffDialog.html  DiffDetail.html  DiffViewer.html  Preview.html  README.md
electron-app/: index.html  main.js  memo.txt  package-lock.json  package.json  preload.js  renderer.js
evidencer/: .gitignore  package-lock.json  package.json
evidencer-web/: index.html  package-lock.json  package.json
evidencer-web/src/: App.jsx  constants.js  index.css
evidencer/src/: app.jsx  index.html  style.css
evidencer/src-tauri/: Cargo.toml  tauri.conf.json
evidencer/src-tauri/src/: main.rs
function-calling/: README.md  index.html  mcp-server.js  package-lock.json  package.json  server.js  vite.config.js
function-calling/public/: _index.html  code.css  code.js  index.html
function-calling/src/: App.vue
md2html/: build.js  compare-html.js  diff-report.html  output.html  output2.html  package-lock.json  package.json  sample.md
minimum-mcp-app/: package-lock.json
minimum-mcp-app/backend/: package-lock.json  package.json
minimum-mcp-app/frontend/: package-lock.json  package.json  (+1 more)
(+55 files in other folders)
